# Defrustrator

./: .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md
example/: eigen.cpp  eigen2.cpp  scope.cpp
include/: value_printer.hpp
plugin/: defrustrator.py
scripts/: install.sh
src/: bridge.cpp  plugin_bridge.cpp
